--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
 			<form class="col-md-6 col-md-offset-3" id="hostfieldform" action='/checkout' method='post'>
 				<div class="row">
 					
-						<h2>Braintree HostedFields Example Checkout </h2>
+						 <h2 class="text-center">Braintree HostedFields Example Checkout </h2>
 					
 				</div>
 
