Fixing transaction field

--- a/views/checkout.erb
+++ b/views/checkout.erb
@@ -25,7 +25,7 @@
     </div>
      <div class='row'>
       <h2>Braintree::Transaction</h2>
-      <%= @transaction.ai(html: true, indent: 2, plain: true) %>
+      <%= @transaction.ai(html: true, indent: 2, plain: false) %>
     </div>
 	<div class='row'>
 	      <h3>Customer information</h3>
